# SimpleAgentInterViewSystem

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html  styles.css
scripts/: chat_agent.py
workflows/: python-intern-fun-interview-chat.yaml
